--- a/src/layauts/Footer/Footer.css
+++ b/src/layauts/Footer/Footer.css
@@ -1,12 +1,7 @@
-.header {
+footer{
     width: 100%;
     height: 60px;
     background-color: aqua;
     display: flex;
     justify-content: space-around;
-    
-}
-
-h1{
-    margin: 10px;
 }
