--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -3,13 +3,128 @@ ul {
     justify-content: center;
   
     color: red;
+    gap: 20px;
+    margin: 30px 60px 30px 60px;
 }
 p{
     color: aqua;
+    
 }
+
 
 h2{
     display: flex;
     justify-content: center;
     color: aliceblue   ;
 }
+
+.about{
+    display: flex;
+    justify-content: center;
+    color: aliceblue;
+    height: 90vh;
+    
+}
+
+.about__container .list {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+     
+  
+    
+}
+.list a{
+   
+   color: aqua;
+    font-size: 20px;
+
+    
+}
+
+
+
+.box11 {
+    width: 400px;
+    height: 180px;
+    padding: 10px; 
+    border-radius: 10px;
+    border: solid;
+    margin-left: 70px;
+    border-color: rgb(19, 18, 70) ;
+    margin-top: 10PX;
+}
+.box11 h2{
+    color: white;
+    font-size: 50px;
+}
+
+.box11 p{
+    color: white;
+    margin-top: 30px;
+    font-size: 25px;
+
+}
+@media (max-width: 1279px) {
+  
+    .about{
+           height: 100%;  
+    }
+    ul{
+        margin: 10px 20px 10px 20px;
+    }
+    .box11{
+        margin-left: 0px;
+        margin-bottom: 70px;
+    }
+  }
+
+
+@media (max-width: 920px) {
+  
+    .about{
+        flex-direction: column;
+        height: 100%;  
+        display: flex;
+        justify-content: center;
+        align-items: center;  
+    }
+    .box11{
+        margin-left: 0px;
+        margin-bottom: 70px;
+    }
+  }
+
+
+
+
+@media (max-width: 768px) {
+  
+    .about{
+        align-items: center;
+         
+    }
+    .box11{
+        width: 300px;
+        height: 200px;
+        margin-bottom: 70px;
+        margin-left: 0px;
+    }
+  }
+
+  @media (max-width: 480px) {
+   
+    .about{
+        align-items: center;
+    }
+    .box11{
+        width: 200px;
+        height: 250px;
+        margin-bottom: 50px;
+        margin-left: 0px;
+    }
+
+    ul{
+        margin: 10px 20px 10px 20px;
+    }
+  }
