--- a/src/Layouts/Main/Main.css
+++ b/src/Layouts/Main/Main.css
@@ -146,7 +146,7 @@ main{
             margin-top: 50px;
             width: 300px;
             margin-left: 0px;
-           
+           height: 320px;
         }
 
         .box1 h2{
