--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -22,8 +22,8 @@ h2{
     display: flex;
     justify-content: center;
     color: aliceblue;
-    height: 90vh;
-    
+       height: 100%;
+
 }
 
 .about__container .list {
@@ -50,9 +50,11 @@ h2{
     padding: 10px; 
     border-radius: 10px;
     border: solid;
-    margin-left: 70px;
+    margin-left: 30px;
     border-color: rgb(19, 18, 70) ;
     margin-top: 10PX;
+    margin-bottom: 70px;
+
 }
 .box11 h2{
     color: white;
@@ -65,7 +67,7 @@ h2{
     font-size: 25px;
 
 }
-@media (max-width: 1279px) {
+@media (max-width: 1280px) {
   
     .about{
            height: 100%;  
@@ -80,14 +82,16 @@ h2{
   }
 
 
-@media (max-width: 920px) {
+@media (max-width: 921px) {
   
     .about{
         flex-direction: column;
-        height: 100%;  
+        
+         
         display: flex;
         justify-content: center;
-        align-items: center;  
+        align-items: center; 
+        height: 100%; 
     }
     .box11{
         margin-left: 0px;
